--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
     --color-primary: #4D41C0;
     --white: #fff;
     --text-ligth-gray: #aaa;
+    --star-yellow: #FFBB3A;
+
 }
 
 * {
@@ -88,7 +90,13 @@ a:hover {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    min-height: 150px;
+    height: 220px;
+}
+
+.dsmovie-card-description-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .dsmovie-card-description h3 {
@@ -96,6 +104,23 @@ a:hover {
     font-size: 14px;
     font-weight: 700;
     text-align: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+
+.dsmovie-card-description-bottom img {
+    width: 22px;
+}
+
+.dsmovie-card-description-bottom p{
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-ligth-gray);
+    margin-bottom: 10px;
 }
 
 .dsmovie-btn,
@@ -131,17 +156,17 @@ a:hover {
     width: 100%;
 }
 
-.dsmovie-form-description h3{
+.dsmovie-form-description h3 {
     font-size: 13px;
     font-weight: 700;
     margin-bottom: 20px;
 }
 
-.dsmovie-form-group{
+.dsmovie-form-group {
     margin-bottom: 20px;
 }
 
-.dsmovie-form-group label{
+.dsmovie-form-group label {
     font-size: 12px;
     color: var(--text-ligth-gray);
 }
