--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ a:hover {
 }
 
 #dsmovie-card-list {
-    padding: 40px 0;
+    padding: 40px 10px;
 }
 
 .dsmovie-card {
@@ -90,7 +90,7 @@ a:hover {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    height: 220px;
+    height: 190px;
 }
 
 .dsmovie-card-description-bottom {
@@ -101,7 +101,7 @@ a:hover {
 
 .dsmovie-card-description h3 {
     margin-bottom: 25px;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: 700;
     text-align: center;
 }
