--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ a:hover {
 }
 
 #dsmovie-card-list {
-    padding: 40px 10px;
+    padding: 0 10px;
 }
 
 .dsmovie-card {
@@ -177,4 +177,50 @@ a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+.dsmovie-pagination-continer{
+    padding: 15px 0;
+    display: flex;
+    justify-content:center ;
+}
+
+.dsmovie-pagination-box{
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dsmovie-pagination-box p{
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+.dsmovie-pagination-box button {
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+    background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dsmovie-pagination-box button img{
+    filter: brightness(0) saturate(100%) invert(18%) sepia(100%) saturate(2916%) hue-rotate(244deg) brightness(82%) contrast(81%);
+}
+
+.dsmovie-pagination-box button:disabled{
+    border: 1px solid var(--text-ligth-gray);
+}
+
+.dsmovie-pagination-box button:disabled img{
+    filter: unset;
+}
+
+.dsmovie-flip-horizontal{
+    transform: rotate(180deg);
 }
